--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,9 +3,20 @@ name: Rust
 on: [push]
 
 jobs:
-  build:
+  build_linux:
 
-    runs-on: [ubuntu-latest,macos]
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose
+
+  build_mac:
+
+    runs-on: macos
 
     steps:
     - uses: actions/checkout@v1
