--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,9 @@ xz2 = "0.1.6"
 semver = "0.9.0"
 dirs = "2.0.2"
 colored = "1.9.0"
+zip = "0.5.3"
+tempfile = "3.1.0"
+tempdir = "0.3.7"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
-tempdir = "0.3.7"
