--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
-clap = { git = "https://github.com/clap-rs/clap.git" }
+clap = "2"
+structopt = "0.3"
 reqwest = "0.9"
 serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
