--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,24 +14,22 @@ structopt = "0.3"
 reqwest = { version = "0.10.7", features = ["blocking", "json"] }
 serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
-sys-info = "0.5.8"
 tar = "0.4.26"
 xz2 = "0.1.6"
 semver = "0.9.0"
 dirs = "3.0.1"
-csv = "1.1"
 colored = "1.9.0"
 zip = "0.5.3"
 tempfile = "3.1.0"
 indoc = "1.0"
 snafu = { version = "0.6.8", features = ["backtrace"] }
-strum = "0.18.0"
-strum_macros = "0.18.0"
 log = "0.4.11"
 env_logger = "0.7.1"
-unzip = "0.1.0"
 atty = "0.2.14"
 encoding_rs_io = "0.1.7"
+
+[target.'cfg(windows)'.dependencies]
+csv = "1.1"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
